1.0.2 tried to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -169,7 +169,8 @@ body {
     }
 
     .navbar {
-        padding: 3vh;
+        padding:25px;
+        height:50px;
     }
 
 
